--- a/src/style.css
+++ b/src/style.css
@@ -74,15 +74,7 @@ body {
 }
 
 .node[data-testid] .title[data-testid] {
-  background: radial-gradient(50% 90%, rgba(48, 180, 36, 0.62) 0%, transparent 80%);
-  text-align: center;
-  white-space: nowrap;
-  padding: 5px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.node[data-testid] .title2[data-testid] {
-  background: radial-gradient(50% 90%, rgba(63, 128, 195, 0.62) 0%, transparent 80%);
+  display: none;
 }
 
 .node[data-testid] .control[data-testid] input,
