--- a/src/style.css
+++ b/src/style.css
@@ -160,77 +160,7 @@ div[data-swb]:nth-child(1){display: block;}
   border-color: transparent;
   box-shadow: rgb(152, 87, 0) 0px 2px 6px 2px, rgb(201, 177, 68) 0px 0px 0px 5px;
 }
-.node[data-testid]{
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 5px 1px;
-  border: 1px solid #000;
-  border-radius: 20px ;
-  background-color: var(--nodeBg);
-  display: flex;
-  flex-direction: column;
-}
-.node[data-testid]:hover{
-  box-shadow: rgb(152, 87, 0) 0px 2px 6px 2px, rgb(201, 177, 68) 0px 0px 0px 5px;
-  background-color: var(--nodeBg)!important; 
-}
-.node[data-testid]::after{
-  content: '';
-  display: block;
-  position: absolute;
-  inset: 0px;
-  border-top: 1.5px solid rgba(255, 255, 255, 0.7);
-  border-radius: inherit;
-  background: linear-gradient(rgba(255, 255, 255, 0.25) 0px, rgba(255, 255, 255, 0.21) 3px, rgba(255, 255, 255, 0.14) 6px, rgba(255, 255, 255, 0.1) 9px, rgba(255, 255, 255, 0.1) 13px, transparent 13px);
-  z-index: -1;
-}
-.node[data-testid].selected[data-testid]{
-  background-color: var(--nodeBg);
-}
 
-.node[data-testid] .title[data-testid] {
-  display: none;
-}
-
-.node[data-testid] .control[data-testid] input,
-.node[data-testid] .input-control[data-testid] input{
-  border-radius: 1em;
-  overflow: hidden;
-  border: 1px solid var(--nodeChildrenBorderColor);
-  background: var(--nodeChildrenBg);
-  color: var(--nodeChildrenColor);
-}
-.node[data-testid] .input-socket[data-testid] {
-  margin-left: 0;
-  display: inline-block;
-}
-.node[data-testid] .output-socket[data-testid] {
-  margin-right: 0;
-  display: inline-block;
-}
-.node[data-testid] .input[data-testid] {
-  text-align: left;
-}
-.node[data-testid] .output[data-testid] {
-  text-align: right;
-}
-.node[data-testid] .input-title[data-testid],
-.node[data-testid] .output-title[data-testid] {
-  vertical-align: middle;
-  color: white;
-  display: inline-block;
-  font-family: sans-serif;
-  font-size: 14px;
-  margin: 6px;
-  line-height: 24px;
-}
-
-.node[data-testid] .socket {
-  border: 2px solid var(--nodeChildrenBorderColor);
-  background: var(--nodeChildrenBg);
-  color: var(--nodeChildrenColor);
-}
-.node[data-testid] .socket:hover {
-  border-color: var(--nodeChildrenColor);
-}
 
 .minimap[data-testid]{
   background: rgba(255, 255, 255, 0.04);
@@ -247,72 +177,30 @@ div[data-swb]:nth-child(1){display: block;}
 
 .menu[data-testid]{
   width: auto;
-  
+  min-width: 150px;
+  white-space: nowrap;
 }
 .menu[data-testid] .block{
   border-bottom: 1px solid var(--nodeChildrenBorderColor);
-  background-color: var(--nodeBg);
+  /* background-color: var(--nodeBg); */
+  background-color: rgba(15, 15, 15, 0.9);
+  width: auto;
 }
 .menu[data-testid] .block:hover{
-  background-color: var(--nodeChildrenBg)
+  background-color: var(--nodeChildrenBg);
+}
+.menu[data-testid] .block .context{
+  padding-right: 15px;
+  width: auto;
+}
+.menu[data-testid] .subitems{
+  min-width: 170px;
 }
 .menu[data-testid] .block input{
   background-color: var(--nodeChildrenBg);
 }
 
-.title[data-testid]{
-  order: 0;
-}
-.input[data-testid]{
-  order: 1;
-}
-.control[data-testid]{
-  order: 2;
-}
-.output[data-testid]{
-  order: 3;
-}
 
-.node[data-testid] .socket[title="action"] {
-  /* border: 0;
-  width: 20px;
-  border-radius: 0px 10px 10px 0px;
-  background: #fff; */
-  border: none;
-  width: 20px;
-  border-radius: 0px;
-  height: 20px;
-  background-color: transparent;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 25 24' width='20' height='20' stroke='%23fff' stroke-width='1' fill='%238080807d'%3e%3cpath d='M0,0 L10,0 L20,10 L10,20 L0,20 Z'%3e%3c/path%3e%3c/svg%3e");
-  /* stroke: white!important;
-    fill: rgba(255, 255, 255, 0.28)!important;
-    stroke-width: 1px;
-    stroke-linejoin: round; */
-}
-.node[data-testid] .socket[title="action"]:hover{
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 25 24' width='20' height='20' stroke='%23fff' stroke-width='3' fill='%238080807d'%3e%3cpath d='M0,0 L10,0 L20,10 L10,20 L0,20 Z'%3e%3c/path%3e%3c/svg%3e");
-}
-
-.node[data-testid] .socket[title="string"]{
-	background: #ffffff;
-}
-
-.node[data-testid] .socket[title="number"]{
-	background: #3dd13f;
-  /*background: #d33396;*/
-}
-
-.node[data-testid] .socket[title="boolean"]{
-	background: #220dff;
-}
-
-.node[data-testid] .socket[title="any"]{
-	background: #ff9999;
-}
-
-.node[data-testid] .socket[title="color"]{
-	    background: #b4e13b;
-}
 
 
 .title_win{
