--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,38 @@ div[data-swb]:nth-child(1){display: block;}
   border: 1px solid #00ff1f5c;
 }
 
+/*    "./components/UI"     */
+.select{
+  width: 100%;
+  max-width: 100%;
+  background-color: var(--nodeChildrenBg);
+  color: #fff;
+  outline: none;
+  border-radius: 3px;
+  height: 22px;
+  font-size: 14px;
+  border: 1px solid var(--nodeChildrenBorderColor);
+  display: block;
+}
+.select option{
+  font-size: 16px;
+}
+.btn{
+  font-size: 14px;
+  height: 32px;
+  padding: 0 15px;
+  border-radius: 6px;
+  border: 2px solid var(--nodeChildrenBorderColor);
+  background: var(--nodeChildrenBg);
+  color: var(--nodeChildrenColor);
+  cursor: pointer;
+}
+.btn:hover{
+  color: #fff;
+  border-color: currentColor;
+}
+/*    "./components/UI"     */
+
 .menu[data-testid]{
   width: auto;
   min-width: 150px;
