--- a/src/style.css
+++ b/src/style.css
@@ -205,6 +205,17 @@ div[data-swb]:nth-child(1){display: block;}
   color: #fff;
   border-color: currentColor;
 }
+.textarea{
+  border: 2px solid var(--nodeChildrenBorderColor);
+  background: var(--nodeChildrenBg);
+  color: var(--nodeChildrenColor);
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 250px;
+  min-height: 100px;
+  border-radius: 3px;
+  display: block;
+}
 /*    "./components/UI"     */
 
 .menu[data-testid]{
@@ -243,4 +254,46 @@ div[data-swb]:nth-child(1){display: block;}
     font-size: 24px;
     color: #49a3ff;
     margin-left: -90px;
+}
+
+.my_scroll{
+	overflow-y: auto;
+}
+.my_scroll::-webkit-scrollbar-button {
+	/*background-image:url('');*/
+	background-repeat:no-repeat;
+	width: 4px;
+	height: 0px
+}
+
+.my_scroll::-webkit-scrollbar-track {
+	background-color: transparent;
+}
+
+.my_scroll::-webkit-scrollbar-thumb {
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	background-color:  rgba(0, 255, 224, 0.3);
+  border: 1px solid rgba(0, 255, 224, 0.5);
+}
+
+.my_scroll::-webkit-scrollbar-thumb:hover{
+	background-color:rgba(0, 255, 224, 0.3);
+}
+
+.my_scroll::-webkit-resizer{
+	/*background-image:url('');*/
+	background-repeat: no-repeat;
+	width: 4px;
+	height: 0px;
+  background-color: rgba(0, 255, 224, 0.3);
+}
+
+.my_scroll::-webkit-scrollbar{
+	width: 7px;
+}
+/*mozilla*/
+.my_scroll{
+	scrollbar-width: thin;
+	scrollbar-color: rgba(0, 255, 224, 0.3) transparent;
 }
