--- a/src/style.css
+++ b/src/style.css
@@ -297,3 +297,115 @@ div[data-swb]:nth-child(1){display: block;}
 	scrollbar-width: thin;
 	scrollbar-color: rgba(0, 255, 224, 0.3) transparent;
 }
+
+.listNodes{
+  position: absolute;
+  top: 50px;
+  right: 100%;
+  background-color: #0f0f0f;
+  color: #fff;
+  min-width: 150px;
+  width: auto;
+  padding: 15px;
+  z-index: 2;
+  border: 1px solid #ffe52b75;
+  transform: translateX(0);
+  transition: transform 0.3s;
+}
+.listNodes.active{
+  transform: translateX(100%);
+}
+.listNodes__btn{
+  position: absolute;
+  width: 28px;
+  height: 35px;
+  left: calc(100% + 1px);
+  top: -1px;
+  border: 1px solid #00ff1f5c;
+  /* background: rgba(0, 0, 0, 0.25); */
+  background: rgb(0, 149, 26,  0.12);
+  text-align: center;
+  cursor: pointer;
+}
+.listNodes__btn::before{
+  content: attr(data-title);
+  display: block;
+  position: absolute;
+  font-size: 10px;
+  width: 100%;
+  color: #00ff1f5c;
+}
+.listNodes__btn:hover::before{
+  color: #00ff1f9c;
+
+}
+.listNodes__btn::after{
+  content: '+';
+  display: block;
+  position: absolute;
+  font-size: 16px;
+  width: 100%;
+  top: 13px;
+  color: #ffe72d9f;
+  transition: transform 0.3s;
+}
+.listNodes__btn:hover::after{
+  color: #ffe62dcb;
+}
+.listNodes.active .listNodes__btn::after{
+  transform: rotateZ(45deg);
+  color: red;
+}
+.accordion{
+  margin-top: 10px;
+  border: 1px solid #fff;
+}
+.accordion__head{
+  white-space: nowrap;
+  padding: 5px 25px 5px 5px;
+  cursor: pointer;
+  position: relative;
+  color: #fff;
+  user-select: none;
+}
+.accordion__head:hover{
+  color: #b9b6b6;
+}
+.accordion__head::after{
+  content: '';
+  position: absolute;
+  right: 7px;
+  top: 10px;
+  border: solid currentColor;
+  border-width: 0 2px 2px 0;
+  padding: 2px;
+  transform: rotate(-135deg);
+  transition: transform 0.3s;
+}
+.accordion.active .accordion__head::after{
+  transform: rotate(45deg);
+}
+.accordion__list{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  line-height: 0;
+  padding: 0 5px;
+  opacity: 0;
+  transition: opacity 0.3s, line-height 0.3s, padding 0.3s;
+}
+.accordion.active .accordion__list{
+  padding: 5px;
+  line-height: 1.5;
+  opacity: 1;
+}
+.accordion__list a{
+  padding-left: 5px;
+  text-decoration: none;
+  white-space: nowrap;
+  color: #00ff1f5c;
+  cursor: pointer;
+}
+.accordion__list a:hover{
+  color: #00ff1f9c;
+}
