--- a/src/style.css
+++ b/src/style.css
@@ -449,7 +449,7 @@ div[data-swb]:nth-child(1){display: block;}
   width: 30%;
   top:0;
   right: 0;
-  height: 50%;
+  height: 500px;
   background: rgba(0, 0, 0, 0.719);
   border: 1px dashed #00ff1f;
   padding: 10px;
@@ -463,7 +463,7 @@ div[data-swb]:nth-child(1){display: block;}
 
 #debug_dialog{
   width: 95%;
-  height: 95%;
+  height: 300px;
   position: absolute;
   background:#1a1b20da;
   text-align: center;
@@ -501,4 +501,17 @@ margin: 2px;
   line-height: 20px;
   cursor: pointer;
 
+}
+
+h3,h4{
+  margin: 0;
+  margin-top: 5px;
+}
+
+#debug_log{
+  width: 100%;
+  height: 160px;
+  background: none;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
